tests/baselines/reference/comparisonOperatorWithUndefinedType(strict=true).errors.txt
comparisonOperatorWithUndefinedType.ts(3,1): error TS2367: This comparison appears to be unintentional because the types 'string | undefined' and 'number | undefined' have no overlap.


==== comparisonOperatorWithUndefinedType.ts (1 errors) ====
    declare let foo: string | undefined;
    declare let bar: number | undefined;
    foo === bar;
    ~~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'string | undefined' and 'number | undefined' have no overlap.